[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yogurt-choco-scone"
version = "0.0.1+2025.1.5"
authors = [
  { name="CookieBox26", email="cookie-box@cookie-box.info" },
]
description = "Utility functions."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.5",
]

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings-python",
]

[project.urls]
GitHub = "https://github.com/CookieBox26/yogurt-choco-scone"
